--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "editorconfig": true
 }
