--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,5 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "endOfLine": "lf",
-  "editorconfig": true
+  "endOfLine": "lf"
 }
