--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": ["source.fixAll", "source.fixAll.eslint"]
+  "editor.codeActionsOnSave": ["source.fixAll", "source.fixAll.eslint"],
+  "files.eol": "\n"
 }
