--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "source.organizeImports": "explicit"
   },
 
-  "prettier.requireConfig": true
+"prettier.requireConfig": true,
+"unityShaderFormatter.indentSize": 2
 }
